# xml

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: analyse.yml  ci.yml
src/: attributes.rs  declaration.rs  element.rs  lib.rs
